--- a/buildspec.yml
+++ b/buildspec.yml
@@ -5,14 +5,16 @@ phases:
     runtime-versions:
       nodejs: 14
     commands:
+      - echo Installing dependencies...
       - npm install
   build:
     commands:
       - echo "Build phase: nothing to build for basic Node.js app"
   post_build:
     commands:
-      - echo "Build completed on `date`"
+      - echo "Build completed on $(date)"
 
 artifacts:
   files:
     - '**/*'
+
