--- a/buildspec.yml
+++ b/buildspec.yml
@@ -3,18 +3,20 @@ version: 0.2
 phases:
   install:
     runtime-versions:
-      nodejs: 14
+      nodejs: 18
     commands:
       - echo Installing dependencies...
       - npm install
   build:
     commands:
-      - echo "Build phase: nothing to build for basic Node.js app"
+      - echo "No build step required"
   post_build:
     commands:
       - echo "Build completed on $(date)"
 
 artifacts:
   files:
-    - '**/*'
-
+    - app.js
+    - package.json
+    - README.md
+    - dist/**/*    # if applicable
