--- a/package.json
+++ b/package.json
@@ -11,4 +11,10 @@
   "dependencies": {
     "express": "^4.18.2"
   }
+  "scripts": {
+  "start": "node server.js",
+  "lint": "echo 'No linter configured'",
+  "test": "echo 'No tests defined'"
+}
+
 }
