--- a/package.json
+++ b/package.json
@@ -13,8 +13,9 @@
   }
   "scripts": {
   "start": "node server.js",
-  "lint": "echo 'No linter configured'",
-  "test": "echo 'No tests defined'"
+  "lint": "eslint .",
+  "test": "jest"
+
 }
 
 }
